# David_Westrom-SDK

./: LICENSE  design.md  pyproject.toml  readme.md
src/theoneapi_dwestrom/: the_one_api.py
src/theoneapi_dwestrom.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/theoneapi_dwestrom/resources/: errors.py
tests/: test_auth_failure.py  test_get_movie.py  test_get_movie_quotes.py  test_get_movies.py
