[project]
name = "theoneapi_dwestrom"
version = "0.0.2"
authors = [
  { name="David Westrom", email="dwestrom@gmail.com" },
]
description = "A quick SDK to interact with The One API"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"The One API" = "https://the-one-api.dev/"